# shredder-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PULLREQUEST.md  README.md  TRANSLATION_SUMMARY.md
src/: error.rs  lib.rs  main.rs  pe_parser.rs  pe_rebuilder.rs  shredder.rs
src/compliance/: audit.rs  gdpr.rs  hipaa.rs  iso27001.rs  mod.rs  nist.rs  osha.rs  pci_dss.rs  security_controls.rs  soc2.rs
src/simd/: avx2.rs  avx512.rs  hipaa_secure.rs  mod.rs  simd.rs
test/: target_logic.c  test_target.rs
tests/: compliance_tests.rs  simd_tests.rs
