[package]
name = "shredder-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
iced-x86 = "1.19.0"
exe = "0.3"
rand = "0.8"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]

[lib]
name = "shredder_rs"
path = "src/lib.rs"

[[bin]]
name = "shredder"
path = "src/main.rs"

